[gd_scene load_steps=2 format=2]

[ext_resource path="res://Widget/CardIdPopup.gd" type="Script" id=1]


[node name="CardIdPopup" type="WindowDialog"]
editor/display_folded = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -50.0
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 100 )
window_title = "Enter a Card_ID"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 90.0
custom_constants/separation = 20
alignment = 1

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 380.0
margin_bottom = 32.0
alignment = 1

[node name="SetListButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Name"]
margin_left = 51.0
margin_right = 211.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
align = 1

[node name="Set" type="LineEdit" parent="MarginContainer/VBoxContainer/Name/SetListButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 120.0
margin_bottom = 12.0
rect_min_size = Vector2( 143, 0 )
align = 1
placeholder_text = "set name"
placeholder_alpha = 0.4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Name"]
margin_left = 215.0
margin_top = 5.0
margin_right = 221.0
margin_bottom = 19.0
text = "_"
align = 1

[node name="Id" type="LineEdit" parent="MarginContainer/VBoxContainer/Name"]
margin_left = 225.0
margin_right = 283.0
margin_bottom = 24.0
align = 1
placeholder_text = "unique Id"
placeholder_alpha = 0.4

[node name="IdNextButton" type="Button" parent="MarginContainer/VBoxContainer/Name"]
margin_left = 287.0
margin_right = 329.0
margin_bottom = 24.0
text = "Next"

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 380.0
margin_bottom = 72.0
alignment = 1

[node name="ValidButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
text = "OK"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 192.0
margin_right = 252.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 20 )
text = "Cancel"

